2014-03-22 Francois Suter <typo3@cobweb.ch>

	* Dropped NOT NULL constraint from data_var field definition, resolves #54702

2013-07-07 Francois Suter <typo3@cobweb.ch>

	* Removed old required files, resolves #49751 (thanks to Loek Hilgersom)

2013-05-28 Francois Suter <typo3@cobweb.ch>

	* Changed compatibility range to TYPO3 4.5-6.1
	* Fixed test of TYPO3_DB member variable
	* Fixed clearing of search and filter
	* Fixed filtering on namespaced keys
	* Fixed display of page icons, resolves #48605
	* Released to TER as version 2.10.0

2012-05-10 Francois Suter <typo3@cobweb.ch>

	* Fixed one forgotten compatibility issue, resolves #36957
	* Released to TER as version 2.9.4
	* Updated for compatibility with TYPO3 4.7, resolves #36957
	* Released to TER as version 2.9.3

2009-12-21 Francois Suter <typo3@cobweb.ch>

	* Added protection against possible XSS attacks
	* Released to TER as version 2.9.2

2009-09-19 Francois Suter <typo3@cobweb.ch>

	* Corrected TCA configuration so that devlog records are properly allowed anywhere in the page tree

2009-09-15 Francois Suter <typo3@cobweb.ch>

	* Removed some left-over debug statements (sorry!)
	* Released to TER as version 2.9.1

2009-09-09 Francois Suter <typo3@cobweb.ch>

	* Added optimization option when deleting excess records from the devlog table
	* Updated the manual
	* Released to TER as version 2.9.0

2009-08-17 Francois Suter <typo3@cobweb.ch>

	* Changed engine database for devlog table to InnoDB

2009-03-26 Francois Suter <typo3@cobweb.ch>

	* Updated the manual
	* Released to TER as version 2.8.0

2009-03-24 Francois Suter <typo3@cobweb.ch>

	* Added check for extra data type
	* Added configuration for filtering extra data of excessive size

2009-03-09 Francois Suter <typo3@cobweb.ch>

	* Added checks for proper initialization of DB object on devlog call
	* Added custom categories for extension configuration options (usable as of TYPO3 4.3)

2009-03-02 Francois Suter <typo3@cobweb.ch>
