@@ -1,13 +1,8 @@
 <?php
-
-	// DO NOT REMOVE OR CHANGE THESE 3 LINES:
-define('TYPO3_MOD_PATH', '../typo3conf/ext/devlog/mod1/');
-$BACK_PATH='../../../../typo3/';
 $MCONF['name']='tools_txdevlogM1';
 
-
 $MCONF['access']='admin';
-$MCONF['script']='index.php';
+$MCONF['script']='_DISPATCH';
 $MCONF['extKey']='devlog';
 
 $MLANG['default']['tabs_images']['tab'] = 'moduleicon.gif';
