@@ -1,6 +1,8 @@
 2014-03-22 Francois Suter <typo3@cobweb.ch>
 
 	* Dropped NOT NULL constraint from data_var field definition, resolves #54702
+	* Use dispatch mechanism for BE module
+	* Add CSRF protection to all BE module forms and links, resolves #57194
 
 2013-07-07 Francois Suter <typo3@cobweb.ch>
 
